--- a/applications/_dashboard/static/index.html
+++ b/applications/_dashboard/static/index.html
@@ -193,6 +193,5 @@ It is still experimental...
   <script src="js/axios.min.js"></script>
   <script src="js/ace/ace.js"></script>
   <script src="js/ace/ext-modelist.js" type="text/javascript" charset="utf-8"></script>
-
-  <script src="js/custom.js"></script>
+  <script src="js/mtable.js"></script>
 </html>
