--- a/applications/_dashboard/static/mtable.html
+++ b/applications/_dashboard/static/mtable.html
@@ -14,7 +14,7 @@
         </h2>
       </div>      
       <div class="panel">
-        <mtable :url="url"></mtable>
+        <mtable :url="url" :filter="filter" :order="order"></mtable>
       </div>
     </div>
   </body>
