--- a/apps/_documentation/static/index.html
+++ b/apps/_documentation/static/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <a class="navbar-item" href=".">
-          <strong>WEB3PY DOCS</strong>
+          <strong>PY4WEB DOCS</strong>
         </a>
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="left-navbar"
            onclick="this.classList.toggle('is-active');document.getElementById(this.dataset.target).classList.toggle('is-active');">
@@ -23,7 +23,7 @@
       </div>
       <div id="left-navbar" class="navbar-menu">
         <div class="navbar-start">       
-          <a class="navbar-item" href="https://web3py.com">Home</a>
+          <a class="navbar-item" href="https://py4web.com">Home</a>
           <a class="navbar-item" href="/_dashboard">Dashboard</a>
         </div>
       </div>
@@ -45,7 +45,7 @@
     </section>
     <footer class="footer">
       <div class="content has-text-centered">
-        Made with web3py, about web3py, for web3py users. BSDv3 License.
+        Made with py4web, about py4web, for py4web users. BSDv3 License.
       </div>
     </footer>
     <script src="js/jquery.js"></script>
