--- a/apps/_documentation/static/index.html
+++ b/apps/_documentation/static/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/bulma.css">
     <link href="css/prism.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic" type="text/css" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>    
