fixes #159, link in docs

--- a/apps/_documentation/static/index.html
+++ b/apps/_documentation/static/index.html
@@ -11,7 +11,7 @@
   <body>    
     <nav class="navbar" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href=".">
+        <a class="navbar-item" href="index.html">
           <strong>PY4WEB DOCS</strong>
         </a>
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="left-navbar"
