--- a/apps/examples/static/components-bulma/grid/grid.html
+++ b/apps/examples/static/components-bulma/grid/grid.html
@@ -4,9 +4,9 @@
     <div class="level">
       <div class="field is-grouped">
         <div class="control is-expanded">
-          <div class="field has-addons">
-            <div class="control is-expanded">
-              <input class="input" type="text" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder">
+          <div class="field has-addons is-expanded">
+            <div class="control is-expanded is-fullwidth">
+              <input class="input search" type="text" v-model="search_text" @keydown="search_enter" :placeholder="search_placeholder">
             </div>
             <div class="control">
               <button class="button has-text-grey" @click="clear_search">
