--- a/apps/examples/static/components-bulma/grid/grid.html
+++ b/apps/examples/static/components-bulma/grid/grid.html
@@ -2,7 +2,7 @@
   <div v-if="rows.length > 0" class="grid">
     <!-- Search bar -->
     <div class="level">
-      <div class="field is-grouped">
+      <div class="field is-grouped" style="width:100%">
         <div class="control is-expanded">
           <div class="field has-addons is-expanded">
             <div class="control is-expanded is-fullwidth">
