--- a/apps/examples/static/components-bulma/grid/grid.html
+++ b/apps/examples/static/components-bulma/grid/grid.html
@@ -37,8 +37,8 @@
         <template v-else>
           <!-- Non-header row -->
           <td v-for="cell in row.cells"  :class="cell.el_class">
-            <button v-if="cell.is_button" class="button">
-              <span v-if="cell.raw_html" v-html="cell.raw_html"></span>
+            <span v-if="cell.raw_html" v-html="cell.raw_html"></span>
+            <button v-else-if="cell.is_button" class="button">
               <a v-else-if="cell.url" :href="cell.url">{{cell.text}}</a>
               <span v-else>{{cell.text}}</span>
             </button>
